--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,5 @@ DB_PORT=3306
 DB_USER=notroot
 DB_PASSWORD=helloworld
 DB_NAME=mvc_express
+JWT_SECRET=yoursecret
+NODE_ENV=development_or_production
